<resources>
    <string name="txt_button_voltar">Voltar</string>
    <string name="txt_edit_contatosid">ContatosID</string>
    <string name="txt_edit_hint_nome">Nome</string>
    <string name="txt_edit_hint_telefone">Telefone</string>
    <string name="txt_edit_hint_email">Email</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_buton_contatos">Contatos</string>
    <string name="txt_edit_cadastro">Cadastro!</string>
</resources>